--- a/src/docs/HtmlCssJs/JS/algorithms/debounceThrottle.mdx
+++ b/src/docs/HtmlCssJs/JS/algorithms/debounceThrottle.mdx
@@ -7,7 +7,7 @@ last-modified: "2020-08-26"
 draft: false
 ---
 
-```js
+```js title=debounce.js
 function debounce(cb) {
   var timer = null;
   return function() {
