perf: header, sidebar

--- a/src/docs/HtmlCssJs/JS/algorithms/debounceThrottle.mdx
+++ b/src/docs/HtmlCssJs/JS/algorithms/debounceThrottle.mdx
@@ -1,13 +1,15 @@
 ---
 title: 节流防抖
-author: bshz
 excerpt: debounce throttle 节流 防抖
+author: bshz
 date: "2020-08-26"
 last-modified: "2020-08-26"
 draft: false
 ---
 
-```js title=debounce.js
+import { Debounce, Throttle } from "../../../../components/doc-components/HtmlCssJs/JS/algorithms/debounceThrottle"
+
+```js
 function debounce(cb) {
   var timer = null;
   return function() {
@@ -18,6 +20,8 @@ function debounce(cb) {
   }
 }
 ```
+
+<Debounce />
 
 ```js
 function throttle(cb) {
@@ -32,3 +36,5 @@ function throttle(cb) {
   }
 }
 ```
+
+<Throttle />
