feat: add blog image

--- a/src/docs/HtmlCssJs/JS/algorithms/节流防抖/index.mdx
+++ b/src/docs/HtmlCssJs/JS/algorithms/节流防抖/index.mdx
@@ -4,10 +4,11 @@ excerpt: debounce throttle 节流 防抖
 author: bshz
 date: "2020-08-26"
 last-modified: "2020-08-26"
+image: ./index.png
 draft: false
 ---
 
-import { Debounce, Throttle } from "../../../../components/doc-components/HtmlCssJs/JS/algorithms/debounceThrottle"
+import { Debounce, Throttle } from "../../../../../components/doc-components/HtmlCssJs/JS/algorithms/debounceThrottle"
 
 ```js
 function debounce(cb) {
