--- a/src/docs/MLAndDL/NNDLBook/3-线性模型/index.mdx
+++ b/src/docs/MLAndDL/NNDLBook/3-线性模型/index.mdx
@@ -1,10 +1,11 @@
 ---
 title: 3-线性模型
-excerpt: 3-线性模型
+excerpt: 《神经网络与深度学习》第3章（线性模型）习题解答
 author: bshz
 date: "2020-06-23"
 last-modified: "2020-06-23"
 image: "./index.png"
+type: practice
 draft: false
 ---
 
