feat: finish blog list image

--- a/src/docs/MLAndDL/NNDLBook/2-机器学习概述/index.mdx
+++ b/src/docs/MLAndDL/NNDLBook/2-机器学习概述/index.mdx
@@ -2,9 +2,10 @@
 title: 2-机器学习概述
 excerpt: 《神经网络与深度学习》第2章（机器学习概述）习题解答
 author: bshz
-date: 2020-06-05
-last-modified: 2020-06-05
+date: "2020-06-05"
+last-modified: "2020-06-05"
 image: ./index.png
+type: article
 draft: false
 ---
 
